<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pddl_agent_example</name>
  <version>0.0.0</version>
  <description>Simple example package for how to set up a CX agent with PDDL Manager interface</description>
  <maintainer email="daniel.swoboda@ml.rwth-aachen.de">Daniel Swoboda</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>cx_bringup</depend>
  <depend>pddl_manager</depend>
  <depend>PkgConfig</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
