<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_rl_clips</name>
  <version>0.1.0</version>
  <description>CLIPS snippets to help usint the cx_rl_interfaces.</description>

  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <author email="frank.pier@rwth-aachen.de">Frank Pier</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cx_rl_interfaces</depend>
  <depend>cx_ros_comm_gen</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <cx_plugin plugin="${prefix}/example_plugin.xml"/>
  </export>
</package>
