<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_rl_multi_robot_mppo</name>
  <version>0.0.0</version>
  <description>Multi-robot maskable proximal policy optimization (mppo) implementation.</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <maintainer email="frank.pier@rwth-aachen.de">Frank Pier</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>python3-gymnasium-pip</depend>
  <depend>python3-numpy</depend>
  <depend>python3-torch</depend>
  <depend>python3-stable-baselines3-pip</depend>
  <depend>python3-sb3-contrib-pip</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
